
2007-11-08  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src: frame.h, gnome_ui.c, capture.c, app_data.c, 
		app_data.h, gnome_frame.c, frame.c:
		optimize X11 roundtrips by obtaining
		required X11 info up front and storing
		it in XVC_AppData. Also fix a BadMatch
		with stopping when using XDamage and
		the notification area 

2007-11-07  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src/xtoffmpeg.c: fix ffmpeg multi-threading
		for very small capture areas where
		4 threads would exceed ffmpeg's 
		internal maximum
	* src: xtoffmpeg.c, gnome_ui.c, capture.c, job.c:
		fixes to state changes during capture
		to make sure no external state changes
		can occur while we're reacting on a
		given state
	* src: control.h, xtoffmpeg.c, gnome_ui.c, 
		capture.c, app_data.c, job.c, app_data.h, 
		gnome_frame.c, job.h, main.c: add the 
		mutexes to the XVC_AppData struct to
		avoid their being global and make sure
		movement of the capture area during a
		capture can only take place with the
		right timing so as not to capture the
		frame while it is moved. Also we need
		to caputre full frames (no Xdamage)
		when the capture area is moved during
		capture.

2007-11-06  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* po/en.po, po/de.po, src: gnome_ui.c, capture.c, 
		job.c, job.h: Added error msg popup
		when error occurs writing captured
		data to file

2007-11-04  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src/xvidcap-dbus-client.c, src/main.c, 
		po: en.po, de.po, POTFILES.in:
		updated i18n
	* doc/man: C/xvidcap-dbus-client.1.xml, 
		C/xvidcap-dbus-client.1, 
		C/xvidcap-dbus-client.1.xml.pot, 
		C/Makefile.am, C/xvidcap.1.xml, C/xvidcap.1, 
		C/xvidcap.1.xml.pot, de/xvidcap.1-de.po, 
		de/xvidcap-dbus-client.1.xml, 
		de/xvidcap-dbus-client.1, 
		de/xvidcap-dbus-client.1-de.po, 
		de/Makefile.am, de/xvidcap.1.xml, 
		de/xvidcap.1: added xvidcap-dbus-client
		manpage and updated xvidcap manpage
		for 1.1.7

2007-11-02  Karl H. Beckers  <karl.h.beckers@gmx.net>