@@ -1,4 +1,13 @@
 
+2007-11-13  Karl H. Beckers  <karl.h.beckers@gmx.net>
+	* src: gnome_ui.c, capture.c, gnome_frame.c:
+		some fixes, improvements, optimizations
+		for changing the capture area while
+		capturing. You may notice some more 
+		delay of repainting the control UI
+		while capturing and moving it, but
+		your captured video will now be correct.
+
 2007-11-08  Karl H. Beckers  <karl.h.beckers@gmx.net>
 	* src: frame.h, gnome_ui.c, capture.c, app_data.c, 
 		app_data.h, gnome_frame.c, frame.c:
